# opentitan-external-example

./: BUILD.bazel  MODULE.bazel  README.md  README.txt
