load("@rules_rust_bindgen//:defs.bzl", "rust_bindgen_toolchain")

package(default_visibility = ["//visibility:public"])

cc_import(
    name = "libclang",
    shared_library = "@llvm_toolchain_llvm//:lib/libclang.so",
)

rust_bindgen_toolchain(
    name = "bindgen_toolchain_impl",
    bindgen = "@rules_rust_bindgen//3rdparty:bindgen",
    clang = "@llvm_toolchain_llvm//:bin/clang",
    libclang = ":libclang",
)

toolchain(
    name = "bindgen_toolchain",
    toolchain = "bindgen_toolchain_impl",
    toolchain_type = "@rules_rust_bindgen//:toolchain_type",
)

